# Grupp7_Datavisualisering_DE_UX

./: .gitignore  app.py  dashboard.py  main.py  pyproject.toml  readme.md
data/db/: movies.duckdb.wal
data/powerbi/: genres.csv  movie_cast.csv  movie_crew.csv  movie_details.csv  movie_genres.csv  movie_origin_countries.csv  movies.csv  production_companies.csv  production_countries.csv  spoken_languages.csv
data/powerbi/joined/: cast_top10.csv  crew_joined.csv  genre_summary.csv  movie_genres_joined.csv  movies_enriched.csv
data/processed/: movies.csv
data/raw/: movies.csv
notebooks/: eda_abdulrahman.ipynb  eda_anton.ipynb  eda_ghalia.ipynb
src/core/: config.py
src/etl/: extract.py  load.py  transform.py
src/grupp7_datavisualisering_de_ux.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: movie.py
src/repository/: movie_repository.py
src/schemas/: movie_details_schema.py  movie_schema.py
src/services/: tmdb_service.py
src/utils/: db_admin.py  export_powerbi.py  json_dump_response_check.py  movie_details.py  paths.py  progress_bar.py
streamlit/: app.py  data
streamlit/components/: charts.py  sidebar.py
streamlit/pages/: actors.py  budget.py  categories.py  overview.py  worldmap.py
streamlit/utils/: data_loader.py  geo.py
